# vectorsearch-applications

./: .deepeval  .deepeval-cache.json  .gitignore  1-Data_Preprocessing_Week1_COLAB.ipynb  1-Preprocess_Data.ipynb  1-Preprocess_Data_Week1.ipynb  1_Data_Preprocessing_Week1_COLAB.ipynb  1_Data_Preprocessing_Week1_PRACTICE.ipynb  2-Index_Data.ipynb  2-Index_Data_Week1.ipynb  2-Index_Search_Data-Wee1.ipynb  2-OpenSearch-Week1.ipynb  2-Weaviate_Week1.ipynb  3-Reranking_and_Evaluation.ipynb  3-Retrieval_Evaluation_Week1.ipynb  3-Retrieval_Evaluation_Week2.ipynb  3-Searching_Week1.ipynb  4-Reranking_Week2.ipynb  4-Retrieval_Evaluation-Copy1.ipynb  4-Retrieval_Evaluation.ipynb  4-Retrieval_Evaluation.py  5-Search_Pipeline.ipynb  Evaluating_the_Ideal_Chunk_Size_for_a_RAG_System_using_LlamaIndex.ipynb  Lecture_Chunking_Example.ipynb  README.md  Untitled.ipynb  YT-Analysis-project.ipynb  aoai_client.py  app.py  app.shell.py  app_features.py  audio_transcription.ipynb  bm25.ipynb  build_dataset.ipynb  build_index.ipynb  class_templates.py  code_interpreter.ipynb  conversation.py  create_new_from_old.py  css_templates.py  (+64 more)
.devcontainer/: Dockerfile  devcontainer.json
data/: golden_100.json  golden_dataset.json  guests.json  huberman_meta.json  qa_training_triplets.json  rl_sql_train_queries.json  short_summaries.json  summaries.json  test_cases_256.json  test_cases_50_256.json  titles.json  train_dataset.json  training_data_300.json  valid_dataset.json  validation_data_100.json  validation_dataset.json
evaluation/: .deepeval-cache.json  custom_eval_models.py  deepeval_demo.ipynb  (+4 more)
(+142 files in other folders)
